--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "ts-node src/server/index.ts"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "puppeteer": "^1.17.0",
     "puppeteer-core": "^1.17.0",
     "puppeteer-extra": "^2.1.3",
     "puppeteer-extra-plugin-stealth": "^2.2.2"
   },
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "@types/puppeteer": "^1.12.4",
     "@types/puppeteer-core": "^1.9.0",
     "ts-node": "^8.2.0",
