--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
+    "jsx": "react",
+    "removeComments": true,
     "target": "es2018",
     "moduleResolution": "node",
     "sourceMap": true,
