--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "author": "Radek",
   "license": "MIT",
-  "main": "src/server/index.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/server/index.ts"
+    "start": "ts-node src/index.ts",
+    "start-watch": "nodemon"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "puppeteer": "^1.17.0",
     "puppeteer-core": "^1.17.0",
@@ -15,9 +17,11 @@
     "puppeteer-extra-plugin-stealth": "^2.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
     "@types/puppeteer": "^1.12.4",
     "@types/puppeteer-core": "^1.9.0",
+    "nodemon": "^1.19.1",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1"
   }
