--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "author": "Radek",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --open --env.NODE_ENV=development",
+    "build": "webpack --env.NODE_ENV=production"
   },
   "dependencies": {
     "apollo-boost": "^0.4.0",
@@ -13,12 +13,14 @@
     "graphql": "^14.3.1",
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.3",
     "awesome-typescript-loader": "^5.2.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
