--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^14.3.1",
+    "merge-graphql-schemas": "^1.5.8",
     "puppeteer": "^1.17.0",
     "puppeteer-core": "^1.17.0",
     "puppeteer-extra": "^2.1.3",
