--- a/package.json
+++ b/package.json
@@ -1,10 +1,4 @@
 {
   "name": "test",
-  "version": "1.0.0",
-  "dependencies": {
-    "immutable": "3.8.2"
-  },
-  "devDependencies": {
-    "@types/immutable": "^3.8.7"
-  }
+  "version": "1.0.0"
 }
