--- a/client/package.json
+++ b/client/package.json
@@ -9,17 +9,23 @@
     "generate:types": "apollo client:codegen _types --endpoint=http://localhost:3000/graphql --target=typescript --useReadOnlyTypes --globalTypesFile=src/_types/grapql.global.ts --no-addTypename"
   },
   "dependencies": {
+    "@material-ui/core": "^4.0.2",
     "apollo-boost": "^0.4.0",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "graphql": "^14.3.1",
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
     "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "uri-templates": "^0.2.0",
+    "use-react-router": "^1.0.7"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.2.8",
+    "@types/material-ui": "^0.21.6",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
