--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --open --env.NODE_ENV=development",
-    "build": "webpack --env.NODE_ENV=production",
-    "generate:types": "apollo client:codegen _types --endpoint=http://localhost:3000/graphql --target=typescript --useReadOnlyTypes --globalTypesFile=src/_types/grapql.global.ts --no-addTypename"
+    "build": "webpack --env.NODE_ENV=production"
   },
   "dependencies": {
     "@material-ui/core": "^4.0.2",
@@ -28,20 +27,15 @@
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
-    "apollo": "^2.12.5",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "typescript": "^3.5.1",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.5.1"
-  },
-  "resolutions": {
-    "graphql": "^14.3.1"
   }
 }
