--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
-  "name": "test",
-  "version": "1.0.0"
+  "name": "tm-auto",
+  "version": "1.0.0",
+  "scripts": {
+    "generate:types": "graphql-codegen --config codegen.yml"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^1.2.0",
+    "@graphql-codegen/typescript": "1.2.0",
+    "@graphql-codegen/typescript-graphql-files-modules": "^1.2.0",
+    "@graphql-codegen/typescript-operations": "^1.2.0",
+    "@graphql-codegen/typescript-resolvers": "1.2.0",
+    "graphql": "^14.3.1"
+  }
 }
