--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "start:watch": "nodemon",
-    "generate:types": "graphql-codegen --config codegen.yml"
+    "start:watch": "nodemon"
   },
   "dependencies": {
     "apollo-server-express": "^2.6.1",
@@ -21,9 +20,6 @@
     "puppeteer-extra-plugin-stealth": "^2.2.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.2.0",
-    "@graphql-codegen/typescript": "1.2.0",
-    "@graphql-codegen/typescript-resolvers": "1.2.0",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
     "@types/puppeteer": "^1.12.4",
