--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "apollo-boost": "^0.4.0",
     "classnames": "^2.2.6",
     "graphql": "^14.3.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
     "react-apollo-hooks": "^0.4.5",
@@ -24,6 +25,7 @@
     "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.8",
     "@types/material-ui": "^0.21.6",
+    "@types/prop-types": "^15.7.1",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
