--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "start:watch": "nodemon",
-    "start:debug": "nodemon --watch src/**/* -e ts,json --exec node --inspect -r ts-node/register src/index.ts"
+    "debug": "node --inspect -r ts-node/register src/index.ts",
+    "debug:watch": "nodemon --watch src/**/* -e ts,json --exec node --inspect -r ts-node/register src/index.ts"
   },
   "dependencies": {
     "apollo-server-express": "^2.6.1",
