--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^14.3.1",
+    "graphql-subscriptions": "^1.1.0",
+    "http": "^0.0.0",
     "merge-graphql-schemas": "^1.5.8",
     "puppeteer": "^1.17.0",
-    "puppeteer-core": "^1.17.0",
     "puppeteer-extra": "^2.1.3",
     "puppeteer-extra-plugin-stealth": "^2.2.2"
   },
@@ -25,7 +26,6 @@
     "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
     "@types/puppeteer": "^1.12.4",
-    "@types/puppeteer-core": "^1.9.0",
     "nodemon": "^1.19.1",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1"
