--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,7 @@
     "removeComments": true,
     "target": "es2018",
     "moduleResolution": "node",
-    "sourceMap": true,
+    "sourceMap": true
   },
   "lib": ["es2015"]
 }
