--- a/package.json
+++ b/package.json
@@ -1,15 +1,123 @@
 {
   "name": "tm-auto",
   "version": "1.0.0",
+  "author": "Buckyx",
+  "main": ".webpack/main",
+  "license": "MIT",
   "scripts": {
-    "generate:types": "graphql-codegen --config codegen.yml"
+    "generate:types": "graphql-codegen --config codegen.yml",
+    "check-types": "tsc",
+    "lint": "eslint \"**/*\"",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
+  },
+  "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@types/react-router-dom": "^5.1.2",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-utilities": "^1.3.2",
+    "electron-devtools-installer": "^2.2.4",
+    "electron-is-dev": "^1.1.0",
+    "graphql": "^14.5.8",
+    "graphql-subscriptions": "^1.1.0",
+    "graphql-tag": "^2.10.1",
+    "graphql-tools": "^4.0.6",
+    "iterall": "^1.2.2",
+    "merge-graphql-schemas": "^1.7.4-b1a1c82.0",
+    "node-ipc": "^9.1.1",
+    "puppeteer": "^2.0.0",
+    "puppeteer-extra": "^2.1.3",
+    "puppeteer-extra-plugin-stealth": "^2.2.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.7.2",
+    "@electron-forge/cli": "^6.0.0-beta.45",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.39",
+    "@electron-forge/plugin-webpack": "^6.0.0-beta.45",
     "@graphql-codegen/cli": "^1.2.0",
     "@graphql-codegen/typescript": "1.2.0",
     "@graphql-codegen/typescript-graphql-files-modules": "^1.2.0",
     "@graphql-codegen/typescript-operations": "^1.2.0",
     "@graphql-codegen/typescript-resolvers": "1.2.0",
-    "graphql": "^14.3.1"
+    "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@types/electron-devtools-installer": "^2.2.0",
+    "@types/node": "^12.0.10",
+    "@types/node-ipc": "^9.1.2",
+    "@types/puppeteer": "^1.20.2",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "@types/uuid": "^3.4.6",
+    "@typescript-eslint/eslint-plugin": "^2.7.1-alpha.16",
+    "@typescript-eslint/parser": "^2.7.1-alpha.16",
+    "babel-loader": "^8.0.6",
+    "copyfiles": "^2.1.1",
+    "css-loader": "^3.2.0",
+    "electron": "^7.1.1",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb-typescript": "^6.3.0",
+    "eslint-config-prettier": "^6.6.0",
+    "eslint-formatter-pretty": "^3.0.0",
+    "eslint-plugin-eslint-comments": "^3.1.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-unicorn": "^13.0.0",
+    "node-loader": "^0.6.0",
+    "style-loader": "^1.0.0",
+    "ts-node": "^8.5.2",
+    "typescript": "^3.8.0-dev.20191116",
+    "webpack": "^4.41.2",
+    "zen-observable-ts": "^0.8.20"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "electron_webpack"
+          }
+        }
+      ],
+      "plugins": [
+        [
+          "@electron-forge/plugin-webpack",
+          {
+            "mainConfig": "./webpack.main.config.js",
+            "renderer": {
+              "config": "./webpack.renderer.config.js",
+              "entryPoints": [
+                {
+                  "html": "./src/client/static/index.html",
+                  "js": "./src/client/app/index.tsx",
+                  "preload": {
+                    "js": "./src/client/preload.ts"
+                  },
+                  "name": "main_window"
+                }
+              ]
+            }
+          }
+        ]
+      ]
+    }
   }
 }
