--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "debug": "electron-forge start -- --remote-debugging-port=9222",
     "generate:types": "graphql-codegen --config codegen.yml",
     "check-types": "tsc",
-    "lint": "eslint \"**/*\"",
+    "lint": "eslint \"src/**/*\"",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
@@ -39,6 +39,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
+    "typeface-roboto": "^0.0.75",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -86,6 +87,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-plugin-unicorn": "^13.0.0",
+    "file-loader": "^4.3.0",
     "node-loader": "^0.6.0",
     "style-loader": "^1.0.0",
     "ts-node": "^8.5.2",
