--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link": "^1.2.13",
+    "apollo-link-error": "^1.1.12",
     "apollo-utilities": "^1.3.2",
     "classnames": "^2.2.6",
     "electron-devtools-installer": "^2.2.4",
