Make sure program is running with required node version and server starts with local version and not electorn one

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "author": "Buckyx",
   "main": ".webpack/main",
   "license": "MIT",
+  "engines": {
+    "node": ">=13.2"
+  },
   "scripts": {
-    "debug": "electron-forge start -- --remote-debugging-port=9222",
+    "debug": "electron-forge start -- --remote-debugging-port=9222 --inspect",
     "generate:types": "graphql-codegen --config codegen.yml",
     "lint": "eslint \"src/**/*\"",
     "start": "electron-forge start",
@@ -40,7 +43,8 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "typeface-roboto": "^0.0.75",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "which": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -69,6 +73,7 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "@types/uuid": "^3.4.6",
+    "@types/which": "^1.3.2",
     "@typescript-eslint/eslint-plugin": "^2.7.1-alpha.16",
     "@typescript-eslint/parser": "^2.7.1-alpha.16",
     "babel-loader": "^8.0.6",
