--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-plugin-simple-import-sort": "^5.0.0",
+    "eslint-plugin-tm-auto": "file:./_eslint",
     "eslint-plugin-unicorn": "^13.0.0",
     "file-loader": "^4.3.0",
     "node-loader": "^0.6.0",
