--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-tools": "^6.0.0",
     "iterall": "^1.3.0",
     "node-ipc": "^9.1.1",
+    "pubsub-js": "^1.8.0",
     "puppeteer": "^3.1.0",
     "puppeteer-extra": "^3.1.9",
     "puppeteer-extra-plugin-stealth": "^2.4.9",
@@ -65,6 +66,7 @@
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.5",
     "@types/node-ipc": "^9.1.3",
+    "@types/pubsub-js": "^1.8.0",
     "@types/puppeteer": "^3.0.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
