--- a/package.json
+++ b/package.json
@@ -17,19 +17,14 @@
     "start-r": "node hot-reload.server.js"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.5",
+    "@apollo/client": "^3.0.0-beta.50",
+    "@apollo/link-error": "^2.0.0-beta.3",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
-    "apollo-link-error": "^1.1.13",
-    "apollo-utilities": "^1.3.4",
     "clsx": "^1.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "graphql": "^15.0.0",
     "graphql-subscriptions": "^1.1.0",
-    "graphql-tag": "^2.10.3",
     "graphql-tools": "^6.0.0",
     "iterall": "^1.3.0",
     "node-ipc": "^9.1.1",
