--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "typeface-roboto": "^0.0.75",
+    "use-debounce": "^3.4.2",
     "uuid": "^8.1.0",
     "which": "^2.0.2"
   },
