--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@apollo/link-error": "^2.0.0-beta.3",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
+    "@types/debounce": "^1.2.0",
     "clsx": "^1.1.0",
+    "debounce": "^1.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "graphql": "^15.0.0",
     "graphql-subscriptions": "^1.1.0",
@@ -37,7 +39,6 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "typeface-roboto": "^0.0.75",
-    "use-debounce": "^3.4.2",
     "uuid": "^8.1.0",
     "which": "^2.0.2"
   },
