--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "generate-types": "ts-node --compiler-options={\\\"module\\\":\\\"CommonJS\\\"} generateGraphqlTypes",
     "lint": "eslint --cache \"src/**/*\"",
     "lint-errors": "yarn lint --quiet",
+    "lint-fix-errors": "yarn lint-errors --fix",
     "typecheck": "tsc",
     "start-m": "webpack --config webpack.main.config.js --mode development&& electron .webpack/main --remote-debugging-port=9222 --inspect",
     "start-r": "node hot-reload.server.js"
