--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    // TODO: make it better
-    "strictPropertyInitialization": false,
+    "strictPropertyInitialization": true,
     "target": "ES5",
     "downlevelIteration": true
   },
