--- a/package.json
+++ b/package.json
@@ -101,7 +101,6 @@
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
     "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
     "electron": "^9.0.0",
@@ -126,6 +125,7 @@
     "html-webpack-plugin": "^4.3.0",
     "node-loader": "^0.6.0",
     "react-refresh": "^0.8.3",
+    "remove-files-webpack-plugin": "^1.4.2",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.4",
     "ts-node": "^8.10.1",
