--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build-main": "set NODE_ENV=production&& webpack --config webpack.main.config.js",
     "build-renderer": "set NODE_ENV=production&& webpack --config webpack.renderer.config.js",
     "build": "set NODE_ENV=production&& yarn build-main&& yarn build-renderer&& yarn build-server",
-    "release": "electron-builder",
+    "release": "electron-builder --dir",
     "start-m": "webpack --config webpack.server.config.js&& webpack --config webpack.main.config.js && electron .webpack/main --remote-debugging-port=9222 --inspect",
     "start-r": "node hot-reload.server.js",
     "postinstall": "electron-builder install-app-deps"
@@ -34,7 +34,6 @@
     },
     "icon": "./resources/images/TMAuto256.png",
     "directories": {
-      "buildResources": "dist",
       "output": "pack"
     },
     "files": [
@@ -43,17 +42,16 @@
     "nodeVersion": "current"
   },
   "dependencies": {
-    "@apollo/client": "^3.0.0-beta.50",
+    "@apollo/client": "^3.0.0-rc.2",
     "@apollo/link-error": "^2.0.0-beta.3",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
-    "@types/debounce": "^1.2.0",
     "clsx": "^1.1.0",
     "debounce": "^1.2.0",
     "electron-squirrel-startup": "^1.0.0",
-    "graphql": "^15.0.0",
+    "graphql": "15.0.0",
     "graphql-subscriptions": "^1.1.0",
-    "graphql-tools": "^6.0.0",
+    "graphql-tools": "^6.0.8",
     "iterall": "^1.3.0",
     "node-ipc": "^9.1.1",
     "pubsub-js": "^1.8.0",
@@ -88,6 +86,7 @@
     "@graphql-codegen/typescript-resolvers": "^1.15.0",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.3.2",
+    "@types/debounce": "^1.2.0",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.5",
     "@types/node-ipc": "^9.1.3",
@@ -103,7 +102,7 @@
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
-    "electron": "^9.0.0",
+    "electron": "^9.0.2",
     "electron-builder": "^22.7.0",
     "eslint": "^7.1.0",
     "eslint-config-airbnb-typescript": "^7.2.1",
@@ -136,7 +135,6 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-node-externals": "^1.7.2",
     "zen-observable-ts": "^0.8.21"
   }
 }
