--- a/package.json
+++ b/package.json
@@ -44,14 +44,14 @@
   "dependencies": {
     "@apollo/client": "^3.0.0-rc.2",
     "@apollo/link-error": "^2.0.0-beta.3",
-    "@material-ui/core": "^4.9.14",
+    "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
-    "clsx": "^1.1.0",
+    "clsx": "^1.1.1",
     "debounce": "^1.2.0",
     "electron-squirrel-startup": "^1.0.0",
-    "graphql": "15.0.0",
+    "graphql": "14.6.0",
     "graphql-subscriptions": "^1.1.0",
-    "graphql-tools": "^6.0.8",
+    "graphql-tools": "^6.0.9",
     "iterall": "^1.3.0",
     "node-ipc": "^9.1.1",
     "pubsub-js": "^1.8.0",
@@ -68,27 +68,27 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
-    "@graphql-codegen/cli": "^1.15.0",
-    "@graphql-codegen/fragment-matcher": "^1.15.0",
-    "@graphql-codegen/near-operation-file-preset": "^1.15.0",
-    "@graphql-codegen/typescript": "^1.15.0",
-    "@graphql-codegen/typescript-graphql-files-modules": "^1.15.0",
-    "@graphql-codegen/typescript-operations": "^1.15.0",
-    "@graphql-codegen/typescript-react-apollo": "^1.15.0",
-    "@graphql-codegen/typescript-resolvers": "^1.15.0",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/preset-typescript": "^7.10.1",
+    "@graphql-codegen/cli": "^1.15.1",
+    "@graphql-codegen/fragment-matcher": "^1.15.1",
+    "@graphql-codegen/near-operation-file-preset": "^1.15.1",
+    "@graphql-codegen/typescript": "^1.15.1",
+    "@graphql-codegen/typescript-graphql-files-modules": "^1.15.1",
+    "@graphql-codegen/typescript-operations": "^1.15.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.15.1",
+    "@graphql-codegen/typescript-resolvers": "^1.15.1",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.3",
     "@types/debounce": "^1.2.0",
     "@types/express": "^4.17.6",
-    "@types/node": "^14.0.5",
+    "@types/node": "^14.0.12",
     "@types/node-ipc": "^9.1.3",
     "@types/pubsub-js": "^1.8.0",
     "@types/puppeteer": "^3.0.0",
@@ -97,40 +97,40 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.0.0",
     "@types/which": "^1.3.2",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
     "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^6.0.1",
+    "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.5.3",
-    "electron": "^9.0.2",
+    "electron": "^9.0.3",
     "electron-builder": "^22.7.0",
     "eslint": "^7.1.0",
-    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-config-airbnb-typescript": "^8.0.2",
     "eslint-formatter-pretty": "^3.0.1",
     "eslint-import-resolver-webpack": "^0.12.1",
-    "eslint-plugin-eslint-comments": "^3.1.2",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.21.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "eslint-plugin-sort-destructure-keys": "^1.3.4",
     "eslint-plugin-tm-auto": "file:./_eslint",
-    "eslint-plugin-unicorn": "^20.0.0",
+    "eslint-plugin-unicorn": "^20.1.0",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
-    "fork-ts-checker-webpack-plugin": "^4.1.4",
+    "fork-ts-checker-webpack-plugin": "^4.1.6",
     "html-webpack-plugin": "^4.3.0",
     "node-loader": "^0.6.0",
     "react-refresh": "^0.8.3",
-    "remove-files-webpack-plugin": "^1.4.2",
+    "remove-files-webpack-plugin": "^1.4.3",
     "style-loader": "^1.2.1",
-    "ts-loader": "^7.0.4",
-    "ts-node": "^8.10.1",
-    "type-fest": "^0.14.0",
-    "typescript": "^3.7.5",
-    "unused-files-webpack-plugin": "^3.4.0",
+    "ts-loader": "^7.0.5",
+    "ts-node": "^8.10.2",
+    "type-fest": "^0.13.1",
+    "typescript": "^3.9.5",
+    "unused-files-webpack-plugin": "3.4.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
