Refactor using react context

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build-main": "set NODE_ENV=production&& webpack --config webpack.main.config.js",
     "build-renderer": "set NODE_ENV=production&& webpack --config webpack.renderer.config.js",
     "build": "yarn build-main&& yarn build-renderer&& yarn build-server",
-    "release": "electron-builder --dir",
+    "release": "yarn build&& electron-builder --dir",
     "start-m": "set NODE_ENV=development&& webpack --config webpack.server.config.js&& webpack --config webpack.main.config.js && electron .webpack/main --remote-debugging-port=9222 --inspect",
     "start-r": "set NODE_ENV=development&& node hot-reload.server.js",
     "postinstall": "electron-builder install-app-deps"
