--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,6 @@
     "node": ">=13.7"
   },
   "dependencies": {
-    "puppeteer": "^3.1.0",
-    "puppeteer-extra": "^3.1.9",
-    "puppeteer-extra-plugin-stealth": "^2.4.9"
+    "puppeteer-extra": "^3.1.9"
   }
 }
