--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "iterall": "^1.3.0",
     "node-ipc": "^9.1.1",
     "pubsub-js": "^1.8.0",
-    "puppeteer": "^3.1.0",
+    "puppeteer-core": "^4.0.0",
     "puppeteer-extra": "^3.1.9",
     "puppeteer-extra-plugin-stealth": "^2.4.9",
     "react": "^16.13.1",
@@ -134,6 +134,7 @@
     "ts-node": "^8.10.2",
     "type-fest": "^0.13.1",
     "typescript": "^3.9.5",
+    "unlazy-loader": "^0.1.3",
     "unused-files-webpack-plugin": "3.4.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
