--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
     "node": ">=13.7"
   },
   "dependencies": {
-    "puppeteer-extra": "^3.1.9"
+    "puppeteer-core": "^4.0.0",
+    "puppeteer-extra": "^3.1.9",
+    "puppeteer-extra-plugin-stealth": "^2.4.9"
   }
 }
