--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build-main": "set NODE_ENV=production&& webpack --config webpack.main.config.js",
     "build-renderer": "set NODE_ENV=production&& webpack --config webpack.renderer.config.js",
     "build": "yarn build-main&& yarn build-renderer&& yarn build-server",
-    "release": "yarn build&& electron-builder --dir",
+    "pack": "yarn release --dir",
+    "release": "yarn build&& electron-builder",
     "start-m": "set NODE_ENV=development&& webpack --config webpack.server.config.js&& webpack --config webpack.main.config.js && electron .webpack/main --remote-debugging-port=9222 --inspect",
     "start-r": "set NODE_ENV=development&& node hot-reload.server.js",
     "postinstall": "electron-builder install-app-deps"
@@ -30,13 +31,14 @@
     "asar": false,
     "productName": "TM Auto",
     "copyright": "Copyright © 2020 ${author}",
-    "win": {
-      "target": "portable"
-    },
     "icon": "./resources/images/TMAuto256.png",
     "directories": {
       "output": "pack"
     },
+    "win": {
+      "target": "nsis"
+    },
+    "publish": null,
     "files": [
       "dist/**/*"
     ],
@@ -134,7 +136,6 @@
     "ts-node": "^8.10.2",
     "type-fest": "^0.13.1",
     "typescript": "^3.9.5",
-    "unlazy-loader": "^0.1.3",
     "unused-files-webpack-plugin": "3.4.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
