--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "source-map-support": "^0.5.19",
     "typeface-roboto": "^0.0.75",
     "uuid": "^8.1.0",
     "which": "^2.0.2"
