--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^6.0.10",
     "iterall": "^1.3.0",
+    "jszip": "^3.5.0",
     "node-ipc": "^9.1.1",
     "pubsub-js": "^1.8.0",
     "puppeteer-core": "^4.0.0",
@@ -102,6 +103,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.3.3",
     "@types/debounce": "^1.2.0",
     "@types/express": "^4.17.6",
+    "@types/jszip": "^3.4.1",
     "@types/node": "^14.0.12",
     "@types/node-ipc": "^9.1.3",
     "@types/pubsub-js": "^1.8.0",
