--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^6.0.10",
     "iterall": "^1.3.0",
+    "jsdom": "^16.2.2",
     "jszip": "^3.5.0",
     "node-ipc": "^9.1.1",
     "pubsub-js": "^1.8.0",
@@ -77,6 +78,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-virtualized": "^9.21.2",
     "source-map-support": "^0.5.19",
     "typeface-roboto": "^0.0.75",
     "uuid": "^8.1.0",
@@ -103,6 +105,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.3.3",
     "@types/debounce": "^1.2.0",
     "@types/express": "^4.17.6",
+    "@types/jsdom": "^16.2.3",
     "@types/jszip": "^3.4.1",
     "@types/node": "^14.0.12",
     "@types/node-ipc": "^9.1.3",
@@ -111,6 +114,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-virtualized": "^9.21.10",
     "@types/uuid": "^8.0.0",
     "@types/which": "^1.3.2",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
