--- a/package.json
+++ b/package.json
@@ -93,6 +93,11 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@snowpack/plugin-dotenv": "^2.0.5",
+    "@snowpack/plugin-react-refresh": "^2.4.0",
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "@swc/cli": "^0.1.35",
+    "@swc/core": "^1.2.50",
     "@types/debounce": "^1.2.0",
     "@types/jsdom": "^16.2.7",
     "@types/node": "^14.14.34",
@@ -107,6 +112,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-virtualized": "^9.21.11",
     "@types/relay-runtime": "^10.1.9",
+    "@types/snowpack-env": "^2.3.3",
     "@types/which": "^1.3.2",
     "@typescript-eslint/parser": "^4.18.0",
     "babel-loader": "^8.2.2",
@@ -125,6 +131,7 @@
     "relay-compiler": "^11.0.0",
     "relay-compiler-language-typescript": "^13.0.6",
     "relay-config": "^11.0.0",
+    "snowpack": "^3.0.13",
     "string-replace-loader": "^3.0.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.18",
