--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,6 +1,9 @@
 {
   "name": "app",
   "version": "1.0.0",
+  "author": "Buckyx",
+  "private": true,
+  "license": "MIT",
   "type": "module",
   "main": "dist/index.cjs",
   "scripts": {
