--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -1,6 +1,9 @@
 {
   "name": "main",
   "version": "1.0.0",
+  "author": "Buckyx",
+  "private": true,
+  "license": "MIT",
   "type": "module",
   "types": "dist/index.d.ts",
   "exports": {
