--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "importsNotUsedAsValues": "error",
     "inlineSources": true,
     "isolatedModules": true,
+    "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
@@ -19,17 +20,8 @@
     "strictPropertyInitialization": true,
     "baseUrl": "./packages",
     "paths": {
-      "shared/*": ["shared/dist/*"],
-      "main/*": ["main/dist/*"],
-      "server/*": ["server/dist*"]
+      "shared/*": ["shared/src/*"],
+      "server/*": ["server/src/*"]
     }
-  },
-  "files": [],
-  "references": [
-    { "path": "packages/shared" },
-    { "path": "packages/main" },
-    { "path": "packages/server" },
-    { "path": "packages/renderer" },
-    { "path": "packages/app" }
-  ]
+  }
 }
