--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -5,14 +5,9 @@
   "private": true,
   "license": "MIT",
   "type": "module",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": "./dist/index.js",
-    "./*": "./dist/*"
-  },
   "scripts": {
-    "build": "tsc --build",
-    "start": "",
+    "build": "node build.mjs",
+    "start": "yarn build&& electron dist/index.cjs",
     "typecheck": "tsc --noEmit",
     "lint": ""
   },
@@ -23,6 +18,7 @@
   "devDependencies": {
     "@types/node-ipc": "^9.1.3",
     "electron": "^12.0.1",
+    "esbuild": "^0.9.6",
     "typescript": "^4.2.3"
   }
 }
