--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -4,15 +4,7 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "target": "ES2020",
-    "lib": ["ESNext"],
-    "composite": true,
-    "declaration": true,
-    "declarationMap": true,
-    "rootDir": "src",
-    "outDir": "dist"
+    "lib": ["ESNext"]
   },
-  "include": ["src/**/*"],
-  "references": [
-    { "path": "../shared" }
-  ]
+  "include": ["src/**/*"]
 }
