--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,15 +5,11 @@
   "private": true,
   "license": "MIT",
   "type": "module",
-  "types": "dist/index.d.ts",
   "exports": {
-    ".": "./dist/index.js",
-    "./*": "./dist/*.js"
+    ".": "./src/index.ts"
   },
   "scripts": {
-    "nexus": "set shouldGenerateArtifacts=true&& set TS_NODE_PROJECT=src/main/tsconfig.json&& nodemon --config nodemon.nexus.json",
-    "build": "tsc --build",
-    "start": "set NODE_ENV=development&& tsc --project packages/main/tsconfig.json && electron . --remote-debugging-port=9222 --inspect",
+    "nexus": "set shouldGenerateArtifacts=true&& nodemon --config nodemon.nexus.json",
     "typecheck": "tsc --noEmit",
     "lint": ""
   },
@@ -38,6 +34,8 @@
     "@types/node-ipc": "^9.1.3",
     "@types/pubsub-js": "^1.8.2",
     "@types/puppeteer-core": "^2.0.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
 }
