--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
+    "build-graphiql": "rollup -c",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/**/*",
     "relay": "relay-compiler --src ./src --schema ../server/src/_api/schema.graphql --language typescript --artifactDirectory ./src/_graphql/__generated__ --eagerESModules"
@@ -19,6 +20,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
+    "graphiql": "^1.4.0",
     "react": "^17.0.1",
     "react-dnd": "^14.0.1",
     "react-dnd-html5-backend": "^14.0.0",
@@ -31,6 +33,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-typescript": "^8.2.0",
     "@snowpack/plugin-build-script": "^2.1.0",
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-react-refresh": "^2.4.1",
@@ -56,6 +62,9 @@
     "relay-compiler": "^11.0.0",
     "relay-compiler-language-typescript": "^13.0.6",
     "relay-config": "^11.0.0",
+    "rollup": "^2.42.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-polyfill-node": "^0.6.2",
     "snowpack": "^3.1.2",
     "typescript": "^4.2.3"
   }
