--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -9,8 +9,11 @@
       "DOM",
       "DOM.Iterable",
       "ESNext"
-    ],
+    ]
   },
-  "files": ["src/index.tsx"],
+  "files": [
+    "src/index.tsx",
+    "src/GraphiQL.tsx"
+  ],
   "include": ["**/*.d.ts"]
 }
