--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "scripts": {
     "build": "node build.mjs",
-    "start": "yarn build&& electron dist/index.cjs",
+    "start": "electron dist/index.cjs",
+    "start-r": "yarn build&& yarn start",
     "typecheck": "tsc --noEmit",
     "lint": ""
   },
