--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -21,10 +21,10 @@
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
     "graphiql": "^1.4.0",
-    "react": "^17.0.2",
+    "react": "^0.0.0-experimental-634cc52e6",
     "react-dnd": "^14.0.1",
     "react-dnd-html5-backend": "^14.0.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^0.0.0-experimental-634cc52e6",
     "react-relay": "^11.0.0",
     "react-router-dom": "^5.2.0",
     "react-virtualized": "^9.22.3",
