--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -4,13 +4,15 @@
   "author": "Buckyx",
   "private": true,
   "license": "MIT",
-  "type": "module",
   "scripts": {
-    "start-main": "yarn workspace main start",
-    "start-renderer": "yarn workspace renderer start",
-    "start": "concurrently \"yarn start-main\" \"yarn start-renderer\""
+    "build": "gulp",
+    "start": "electron build/main/index.cjs"
   },
   "devDependencies": {
-    "concurrently": "^6.0.0"
+    "del": "^6.0.0",
+    "electron": "^12.0.2",
+    "eslint": "^7.23.0",
+    "gulp": "^4.0.2",
+    "gulp-run": "^1.7.1"
   }
 }
