--- a/package.json
+++ b/package.json
@@ -15,16 +15,8 @@
     "server": "yarn workspace server",
     "renderer": "yarn workspace renderer",
     "shared": "yarn workspace shared",
-    "renderer-typecheck": "yarn renderer typecheck",
-    "lint": "eslint --cache \"src/**/*\"",
-    "lint-errors": "yarn lint --quiet",
-    "lint-fix-errors": "yarn lint-errors --fix",
-    "build-server": "set NODE_ENV=production&& webpack --config webpack.server.config.js",
-    "build-main": "set NODE_ENV=production&& webpack --config webpack.main.config.js",
-    "build-renderer": "set NODE_ENV=production&& webpack --config webpack.renderer.config.js",
-    "build": "concurrently \"yarn build-mai\" \"yarn build-renderer\" \"yarn build-server\"",
-    "start-r": "set NODE_ENV=development&& webpack serve --config webpack.renderer.config.js",
-    "relay": "relay-compiler"
+    "nexus": "yarn server nexus",
+    "relay": "yarn renderer relay"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^4.19.0",
