--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -11,7 +11,7 @@
     "start": "electron dist/index.cjs",
     "start-r": "yarn build-dev&& yarn start",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src/**/*"
+    "lint": "eslint --cache src/**/*"
   },
   "peerDependencies": {
     "@typescript-eslint/parser": "^4.19.0",
