Update puppeteer and use regular react version

--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -26,10 +26,10 @@
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
     "graphiql": "^1.4.0",
-    "react": "^0.0.0-experimental-634cc52e6",
-    "react-dnd": "^14.0.1",
+    "react": "^17.0.2",
+    "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
-    "react-dom": "^0.0.0-experimental-634cc52e6",
+    "react-dom": "^17.0.2",
     "react-relay": "^11.0.0",
     "react-router-dom": "^5.2.0",
     "react-virtualized": "^9.22.3",
@@ -52,7 +52,7 @@
     "@types/react-relay": "^7.0.17",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-virtualized": "^9.21.11",
-    "@types/relay-runtime": "^10.1.9",
+    "@types/relay-runtime": "^11.0.0",
     "@types/snowpack-env": "^2.3.3",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-relay": "^11.0.0",
