Upgrade clone-deep transitive dependency so the whole server can be bundled

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "@typescript-eslint/parser": "^4.19.0",
     "eslint-plugin-modules-newline": "^0.0.6",
     "eslint-plugin-simple-import-sort": "^7.0.0"
+  },
+  "resolutions": {
+    "clone-deep": "^4.0.1"
   }
 }
