--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0"
   },
   "dependencies": {
+    "@electron/remote": "^1.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "node-ipc": "^9.1.4"
   },
